src/main/java/com/example/demo/error/ErrorResponse.java
package com.example.demo.error;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor
public class ErrorResponse {
  private int code;
  private Object error;
}
